--- a/index.html
+++ b/index.html
@@ -1,11 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fansite</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Acceuil</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
+  <link rel="preconnect" href="https://fonts.gstatic.com/"crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+  <header>
+    <nav>
+      <div class="logo">
+        <img src="image/CR7-removebg-preview.png" alt="">
+      </div>
+      <div class="liens">
+        <ul>
+          <li><a href="index.html"></a>Acceuil</li>
+          <li>Palmarès</li>
+          <li>Boutique</li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <h1>Acceuil</h1>
+    <section class="container">
+      <div class="image1"><img src="image/Sporting Lisboa.jpg" alt="image1" class="image"></div>
+      <div class="border1"><p>"Cristiano Ronaldo à débuté sa carrière professionnelle à Sporting Lisboa, Lisbonne en français, en 2002 il a rappidement 
+        attiré l'attention avec son talent exceptionnel. Il a joué pour le club jusqu'en 2003 avant de rejoindre Manchester United 
+        en Angleterre."</p></div>
+      <div class="image2"><img src="image/Manchester United.jpg" alt="image2" class="image"></div>
+      <div class="border2"><p>"En 2003 Cristiano rejoint les Red Devils, ou il a connu une ascencion fulgurante. Sous tutelle de Sir Alex Ferguson ou il a remporté 
+        de nombreux titres dont trois titres de Premier League et une Ligue des Champions en équipe et individuellement il a remporté des trophées 
+        pretigieux comme le Ballon d'Or, le meilleur joueur FIFA, le Soulier d'Or en 2008 et Joueur de l'anée PFA (Professionnal Footballers 
+        Associations) ou il l'a remporter a deux reprises en 2007 et 2008. Puis Ronaldo fait son retour a Old Trafford en 2021 mais il a du passer 
+        des défis tant sur le plan sportif que logistique."</p></div>
+      <div class="image3"><img src="image/Real Madrid.jpg" alt="image3" class="image"></div>
+      <div class="border3"><p>"En 2009 un transfert vers le Real Madrid se fait pour la somme de 94 millions d'euro, ce qui en a fait à l'époque le transfert le plus cher de l'histoire 
+        du football. En rejoignant le Real Madrid au cours de ses 9 saison au club, il a remporté 4 Champions League, 2 Liga, 2 Coupe du Roi et 3 Supercoupes de l'UEFA 
+        en équipe et il remporte 4 Ballon d'Or (2013, 2014, 2016, 2017), 4 Souliers d'Or pour avoir été le meilleur buteur de la Liga (2010, 2011, 2013, 2014), il a 
+        reçu le Trophée FIFA du Meilleur Joueur de l'Année en 2016  et a été élu meilleur Joueur UEFA de l'Année à trois reprises (2014, 2016, 2017)."</p></div>
+      <div class="image4"><img src="image/Juventus.jpg" alt="image4" class="image"></div>
+      <div class="border4"><p>"Depuis son arrivée à la Juventus en 2018 Cristiano Ronaldo a continué à afficer un niveau de performance exceptionnel, marquant régulièrement des buts 
+        cruciaux et aidant le club à remporter des titres domestiques. Il a également continué à battre des record individuels, démontrant sa persévérance et sa 
+        détermination sur le terrain. En outre, son influence en dehors du terrain a renforcé la présence mondiale de la Juventus et à contribué à accroître la popularité 
+        de la Serie A."</p></div>
+    </section>
+    <section class="container"></section>
+    <section class="container"></section>
+    <section class="container"></section>
+  </main>
+  <footer>
+    <section>
+      <h3>Adresse</h3>
+      <p>147 la Plateforme,Paris,1677,France</p>
+    </section>
+    <section>
+      <h3>Informations</h3>
+      <p>djnjnjndjnjnjnnjnjnj</p>
+      <p>uueduedubduebdebbdb</p>
+      <p>ubduebdebudbebeejbd</p>
+    </section>
+    <section>
+      <h3>Suivez-Nous</h3>
+      <p>Facebook</p>
+      <p>Twitter</p>
+      <p>Snapchat</p>
+    </section>
+  </footer>
 </body>
 </html>
