--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </div>
       <div class="liens">
         <ul>
-          <li><a href="index.html"></a>Acceuil</li>
-          <li>Palmarès</li>
-          <li>Boutique</li>
+          <li>Acceuil</li>
+          <li><a href="Palmarès.html">Palmarès</a></li>
+          <li><a href="Boutique.html">Boutique</a></li>
         </ul>
       </div>
     </nav>
